# disease_normalizer

./: .gitignore  README.md  pyproject.toml
src/: normalizer.py
src/disease_normalizer/: normalizer.py  utils.py
src/disease_normalizer/converter/: exact_matcher.py  fuzzy_matcher.py
src/disease_normalizer/converter/dnorm/: dnorm.py  dnorm_converter.py
src/disease_normalizer/preprocessor/: abbr_preprocessor.py  base_preprocessor.py  basic_preprocessor.py  pipeline.py
src/japanese_disease_normalizer/: normalizer.py  utils.py
src/japanese_disease_normalizer/converter/: base_converter.py  fuzzy_matcher.py
src/japanese_disease_normalizer/converter/dnorm/: dnorm.py
src/japanese_disease_normalizer/preprocessor/: pipeline.py
src/japanese_disease_normalizer/spacy_extension/: __init__.py  manbyo_normalizer.py
tests/: conftest.py  sample_dict.csv  test_abbr_preprocessor.py  test_basic_preprocessor.py  test_dnorm_converter.py  test_exact_matcher.py  test_fuzzy_matcher.py  test_normalizer.py  test_preprocess_pipeline.py  test_spacy_extension.py  test_utils.py
