[tool.poetry]
name = "japanese_disease_normalizer"
version = "0.1.0"
description = ""
authors = ["ujiuji1259 <suzzz428@gmail.com>"]
repository = "https://github.com/ujiuji1259/disease_normalizer.git"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
simstring-pure = "^1.0.0"
mecab-python3 = "^1.0.3"
requests = "^2.25.1"
scikit-learn = "^0.24.0"
tqdm = "^4.1.0"
jaconv = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-mock = "^3.6.0"
spacy = {extras = ["ja"], version = "^3.0.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
